# commitCop

./: .gitignore  README.md  pyproject.toml  setup.py
configs/: default.yaml
man/man1/: ccop.1
src/ccop/: __main__.py  cli.py  main.py
src/ccop/commands/: config.py  format.py  init.py  uninstall.py  validate.py
src/ccop/core/: config.py  git_helper.py  hooks.py  validator.py
src/ccop/templates/: commit-msg.py
